<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yogen</string>    <string name="menu_yogen">Yogen</string>
    <string name="menu_newgame">New Game</string>
    <string name="menu_register">Register</string>
    <string name="menu_options">Options</string>
    <string name="menu_save_quit">Save&amp;Quit</string>
    <string name="menu_quit">Quit</string>
    <string name="action_settings">Settings</string>
   	<string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear Stats</string>
	<string name="deal_2">Dealing 2 Cards</string>
	<string name="deal_3">Dealing 3 Cards</string>
 	<string name="deal_4">Dealing 4 Cards</string>
   	<string name="deal_5">Dealing 5 Cards</string>
    <string name="deal_6">Dealing 6 Cards</string>
    <string name="deal_7">Dealing 7 Cards</string>
    <string name="deal_8">Dealing 8 Cards</string>
    <string name="deal_9">Dealing 9 Cards</string>
    <string name="deal_10">Dealing 10 Cards</string>
    <string name="deal_11">Dealing 11 Cards</string>
	<string name = "help_text">
	 This is the help menu\n
	 Eventually this will be more helpful\n
	 now I\'m just making a reminder to do\n
	 stuff at a later time.\n
	 Jon Lennon asked for help\n
	 Didn\'t stop someone from shooting\n
	 him though\n  </string>
<string name="quit">Quit</string>
<string name="sure">Are you sure?</string>
<string name="win">Congratulations you won!!!\n 
    				Play another game?
    </string>
<string name="lose">You have lost play\n another game?</string>
<string name ="yes">Yes</string>
<string name="no">No</string><string name="menu_help">Help?</string>
<string name="rules">How to Play</string>

<string name="menu_welcome">Highs &amp; Lows This is YOGEN</string>

<string name="reg_given_name">First Name?</string>

<string name="reg_surname">Surname</string>

<string name="reg_password">Password?</string>

<string name="reg_password_re">Re-enter password.</string>

<string name="reg_email"></string>

<string name="reg_emails">email address</string>

<string name="reg_email_re">Re-enter password</string>

<string name="reg_player_name">New Player Name</string>
    

</resources>
	